--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,50 @@
-Django
-torch
-torchvision
-numpy
-opencv-python
-pillow
-deep_utils
-matplotlib
-gdown
-docker-compose
-termcolor
-facenet-pytorch
+asgiref==3.5.2
+attrs==22.1.0
+bcrypt==3.2.2
+beautifulsoup4==4.11.1
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==37.0.4
+cycler==0.11.0
+deep-utils==0.10.3
+distro==1.7.0
+Django==4.1
+docker==6.0.0
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+facenet-pytorch==2.5.2
+filelock==3.8.0
+fonttools==4.36.0
+gdown==4.5.1
+idna==3.3
+jsonschema==3.2.0
+kiwisolver==1.4.4
+matplotlib==3.5.3
+numpy==1.23.2
+opencv-python==4.6.0.66
+packaging==21.3
+paramiko==2.11.0
+Pillow==9.2.0
+pycparser==2.21
+PyNaCl==1.5.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+PyYAML==5.4.1
+requests==2.28.1
+scipy==1.9.0
+six==1.16.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.2
+termcolor==1.1.0
+texttable==1.6.4
+torch==1.12.1
+torchvision==0.13.1
+tqdm==4.64.0
+typing_extensions==4.3.0
+urllib3==1.26.11
+websocket-client==0.59.0
